added api to assign users based on join code
