# server/api/routes.js
@@ -40,6 +40,7 @@ router.post('/role', validateSession, role.addRole);
 router.post('/poll-response', validateSession, poll.addPollResponse);
 router.post('/upload-media', validateSession, bodyParser.raw({ type: ['image/jpeg', 'image/png'], limit: '5mb' }), media.uploadMedia); //TODO: Very vulnerable to malicious files
 router.post('/poll', validateSession, poll.addPoll);
+router.post('/role/:join_code', validateSession, role.addRoleByJoinCode)
 
 //Delete Requests
 
